# MathernoGL

./: .gitignore  CMakeLists.txt  build.bash  extract_includes.bash  premake5.lua
dependencies/include/: FreeImage.h  tiny_obj_loader.h
include/mathernogl/: Assert.h  MathernoGL.h
shaders/: LineStripVS.glsl  LinesFS.glsl  LinesVS.glsl  MeshFS.glsl  MeshVS.glsl  ParticleQuadsFS.glsl  ParticleQuadsVS.glsl  ParticlesFS.glsl  ParticlesVS.glsl  ScreenLineStripFS.glsl  ScreenLineStripVS.glsl  ScreenQuadVS.glsl  SilhouttingFS.glsl  UserInterfaceFS.glsl  UserInterfaceVS.glsl  VoxelFS.glsl  VoxelGS.glsl  VoxelVS.glsl
src/: Assert.h  MathernoGL.h  Types.h
src/GameSystem/: BoundingBoxManagerImpl.cpp  BoundingBoxManagerImpl.h  Camera.h  GameConfig.cpp  GameConfig.h  GameContextImpl.cpp  GameContextImpl.h  GameSystem.h  InputCodes.h  InputManagerImpl.cpp  InputManagerImpl.h  Timer.h
src/ParticleSystem/: ParticleEmitter.cpp  ParticleEmitter.h  ParticleSystem.cpp  ParticleSystem.h  RenderableParticles.cpp  RenderableParticles.h
src/RenderSystem/: BoundingBox.cpp  BoundingBox.h  Font.h  HeightMapFactory.cpp  HeightMapFactory.h  MeshStorage.cpp  MeshStorage.h  PostProcessing.cpp  PostProcessing.h  RenderContextImpl.cpp  RenderContextImpl.h  RenderSystem.h  RenderUtils.cpp  RenderUtils.h  RenderableLineBoxes.cpp  RenderableLineBoxes.h  RenderableLineStrips.cpp  RenderableLineStrips.h  RenderableLines.cpp  RenderableLines.h  RenderableMesh.cpp  RenderableMesh.h  RenderableSetImpl.cpp  RenderableSetImpl.h  RenderableTerrain.cpp  RenderableTerrain.h  RenderableVoxels.cpp  (+9 more)
(+123 files in other folders)
